services/monitoring/prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kd.itversity.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /prometheus(/|$)(.*)
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port:
              number: 9090
